# vulkan-parse

./: Cargo.toml  rustfmt.toml
src/: codegen.rs  escape_utils.rs  into_xml.rs  lexer.rs  lib.rs  parse_xml.rs  parser.rs
src/typed_registry/: commands_registry.rs  common.rs  enums_registry.rs  extension_registry.rs  feature_registry.rs  format_registry.rs  mod.rs  registry.rs  spirv_registry.rs  sync_registry.rs  types_registry.rs  video_codecs_registry.rs
tests/: conformance_test.rs  serialization_test.rs
vulkan-parse-derive-helper/: Cargo.toml
vulkan-parse-derive-helper/src/: lib.rs  serialization.rs
