[package]
name = "vulkan-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
roxmltree = "~0.15.0"
logos = "~0.12.1"
peg = "~0.8.1"
enumflags2 = {version = "~0.7.5", features = ["serde"]}
strum = { version = "0.24", features = ["derive"] }
serde = {version = "1", features = ["derive"]}
quick-xml = {version = "0.25", optional = true}

[features]
default = ["quick-xml"]

[dev-dependencies]
ron = "0.8.0"
