[package]
name = "vulkan-parse"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[[test]]
name = "conformance_test"
required-features = ["roundtrip"]

[[test]]
name = "serialization_test"
required-features = ["serialize"]

[dependencies]
roxmltree = "~0.15.0"
logos = "~0.12.1"
peg = "~0.8.1"
enumflags2 = "~0.7.5"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "2", optional = true }
quick-xml = { version = "0.25", optional = true }

[features]
default = []
serialize = ["serde", "enumflags2/serde", "serde_with"]
roundtrip = ["quick-xml"]

[dev-dependencies]
serde_json = "1"
