[package]
name = "vulkan-parse"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[[test]]
name = "conformance_test"
required-features = ["roundtrip"]

[[test]]
name = "serialization_test"
required-features = ["serialize"]

[dependencies]
xmlparser = "~0.13.5"
logos = "~0.14.2"
peg = "~0.8.1"
enumflags2 = "~0.7.5"
strum = { version = "0.26", features = ["derive"] }
itertools = "~0.13"
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", optional = true }
vulkan-parse-derive-helper = { path = "vulkan-parse-derive-helper" }

[features]
default = []
serialize = ["serde", "enumflags2/serde", "serde_with"]
roundtrip = []

[dev-dependencies]
serde_json = "1"
roxmltree = "~0.18.0"

[workspace]
members = ["vulkan-parse-derive-helper"]
